--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -1,48 +1,41 @@
-# Source: https://github.com/Chick2D/neofetch-themes/
-# Made by https://github.com/Dan1jel
-# Customization Wiki https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
+# https://github.com/Chick2D/neofetch-themes/
+# Made by https://github.com/karmafake21
 
 print_info() {
-  # info title
-  # info underline
-  prin "\n"
-  # prin "\n Weather" "$(curl wttr.in/?0?q?T | awk '/°(C|F)/ {printf $(NF-1) $(NF) " ("a")"} /,/ {a=$0}')"
-  prin "┌──────────────────────────────────────┐"
-  # info underline
-  info "\n \n OS" distro
-  info "\n \n Host" model
-  info "\n \n Kernel" kernel
-  info "\n \n Uptime" uptime
-  info "\n \n Packages" packages
-  info "\n \n Shell" shell
-  info "\n \n Resolution" resolution
-  info "\n \n DE" de
-  info "\n \n WM" wm
-  info "\n \n WM Theme" wm_theme
-  # info "\n \n Theme" theme
-  # info "\n \n Icons" icons
-  info "\n \n Terminal" term
-  info "\n \n Terminal Font" term_font
-  info "\n \n CPU" cpu
-  info "\n \n GPU" gpu
-  info "\n \n Memory" memory
+  info "" title
+  info underline
+  info " " distro
+  # info " " model
+  info " " kernel
+  info " " uptime
+  info " " packages
+  info " " shell
+  info " " term
+  info " " term_font
+  # info "Resolution" resolution
+  # info " " de
+  # info "⊞ " wm
+  # info "WM Theme" wm_theme
+  # info " " theme
+  # info "󰍮" icons
+  # info " " "Ryzen 5 3600"
+  # info " " gpu
+  # info "󰍛 " memory
+
   # info "GPU Driver" gpu_driver  # Linux/macOS only
   # info "CPU Usage" cpu_usage
-  info "\n \n Disk" disk
-  info "\n \n Battery" battery
-  info "\n \n Song" song
-  [[ "$player" ]] && prin "\n \n Music Player" "$player"
-  info "\n \n Local IP" local_ip
+  # info "Disk" disk
+  # info "Battery" battery
+  # info "Font" font
+  # info "Song" song
+  # [[ "$player" ]] && prin "Music Player" "$player"
+  info "🖧 " local_ip
   # info "Public IP" public_ip
-  prin "└──────────────────────────────────────┘"
   # info "Users" users
   # info "Locale" locale  # This only works on glibc systems.
-  # info cols
-  prin "\n"
 
-  prin "\n \n ${cl0}──${cl1}────${cl2}────${cl3}────${cl4}────${cl5}────${cl6}────${cl7}──"
-
-  # prin "\n \n \n \n \n \n ${cl0}⬤ \n \n ${cl1}⬤ \n \n ${cl2}⬤ \n \n ${cl3}⬤ \n \n ${cl4}⬤ \n \n ${cl5}⬤ \n \n ${cl6}⬤ \n \n ${cl7}⬤"
+  info cols
+  prin "${cl5}────────────────────── ${cl0} ${cl0} ${cl2} ${cl2} ${cl5} ${cl5} ${cl5} $(color 15) ${cl9}─┘"
 }
 
 reset="\033[0m"
@@ -63,15 +56,7 @@ cl4="${blue}"
 cl5="${magenta}"
 cl6="${cyan}"
 cl7="${white}"
-
-# Title
-
-# Hide/Show Fully qualified domain name.
-#
-# Default:  'off'
-# Values:   'on', 'off'
-# Flag:     --title_fqdn
-title_fqdn="off"
+cl9="${reset}"
 
 # Kernel
 
@@ -107,7 +92,7 @@ distro_shorthand="off"
 # Example:
 # on:  'Arch Linux x86_64'
 # off: 'Arch Linux'
-os_arch="off"
+os_arch="hide"
 
 # Uptime
 
@@ -135,18 +120,6 @@ uptime_shorthand="on"
 # on:   '1801MiB / 7881MiB (22%)'
 # off:  '1801MiB / 7881MiB'
 memory_percent="off"
-
-# Change memory output unit.
-#
-# Default: 'mib'
-# Values:  'kib', 'mib', 'gib'
-# Flag:    --memory_unit
-#
-# Example:
-# kib  '1020928KiB / 7117824KiB'
-# mib  '1042MiB / 6951MiB'
-# gib: ' 0.98GiB / 6.79GiB'
-memory_unit="mib"
 
 # Packages
 
@@ -261,7 +234,7 @@ cpu_cores="logical"
 # C:   'Intel i7-6500U (4) @ 3.1GHz [27.2°C]'
 # F:   'Intel i7-6500U (4) @ 3.1GHz [82.0°F]'
 # off: 'Intel i7-6500U (4) @ 3.1GHz'
-cpu_temp="off"
+cpu_temp="on"
 
 # GPU
 
@@ -359,15 +332,6 @@ public_ip_host="http://ident.me"
 # Flag:    --ip_timeout
 public_ip_timeout=2
 
-# Desktop Environment
-
-# Show Desktop Environment version
-#
-# Default: 'on'
-# Values:  'on', 'off'
-# Flag:    --de_version
-de_version="on"
-
 # Disk
 
 # Which disks to display.
@@ -386,13 +350,13 @@ de_version="on"
 # disk_show=('/'):
 #      'Disk (/): 74G / 118G (66%)'
 #
-disk_show=('/storage/emulated' '/' '/server')
+disk_show=('/')
 
 # Disk subtitle.
 # What to append to the Disk subtitle.
 #
 # Default: 'mount'
-# Values:  'mount', 'name', 'dir', 'none'
+# Values:  'mount', 'name', 'dir'
 # Flag:    --disk_subtitle
 #
 # Example:
@@ -406,23 +370,7 @@ disk_show=('/storage/emulated' '/' '/server')
 # dir:    'Disk (/): 74G / 118G (66%)'
 #         'Disk (Local Disk): 74G / 118G (66%)'
 #         'Disk (Videos): 74G / 118G (66%)'
-#
-# none:   'Disk: 74G / 118G (66%)'
-#         'Disk: 74G / 118G (66%)'
-#         'Disk: 74G / 118G (66%)'
-disk_subtitle="none"
-
-# Disk percent.
-# Show/Hide disk percent.
-#
-# Default: 'on'
-# Values:  'on', 'off'
-# Flag:    --disk_percent
-#
-# Example:
-# on:  'Disk (/): 74G / 118G (66%)'
-# off: 'Disk (/): 74G / 118G'
-disk_percent="on"
+disk_subtitle="mount"
 
 # Song
 
@@ -449,17 +397,13 @@ disk_percent="on"
 # gmusicbrowser
 # gogglesmm
 # guayadeque
-# io.elementary.music
 # iTunes
 # juk
 # lollypop
 # mocp
 # mopidy
 # mpd
-# muine
 # netease-cloud-music
-# olivia
-# playerctl
 # pogo
 # pragha
 # qmmp
@@ -469,7 +413,6 @@ disk_percent="on"
 # smplayer
 # spotify
 # strawberry
-# tauonmb
 # tomahawk
 # vlc
 # xmms2d
@@ -521,7 +464,7 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(distro)
+colors=(9 8 5 10 11 13)
 
 # Text Options
 
@@ -530,7 +473,7 @@ colors=(distro)
 # Default:  'on'
 # Values:   'on', 'off'
 # Flag:     --bold
-bold="on"
+bold="off"
 
 # Enable/Disable Underline
 #
@@ -544,7 +487,8 @@ underline_enabled="on"
 # Default:  '-'
 # Values:   'string'
 # Flag:     --underline_char
-underline_char="-"
+underline_char=" ̶"
+#underline_char="─"
 
 # Info Separator
 # Replace the default separator with the specified string.
@@ -555,7 +499,7 @@ underline_char="-"
 # Example:
 # separator="->":   'Shell-> bash'
 # separator=" =":   'WM = dwm'
-separator=":"
+separator=" "
 
 # Color Blocks
 
@@ -587,7 +531,7 @@ color_blocks="on"
 # Default:  '3'
 # Values:   'num'
 # Flag:     --block_width
-block_width=3
+block_width=2
 
 # Color block height in lines
 #
@@ -595,20 +539,6 @@ block_width=3
 # Values:   'num'
 # Flag:     --block_height
 block_height=1
-
-# Color Alignment
-#
-# Default: 'auto'
-# Values: 'auto', 'num'
-# Flag: --col_offset
-#
-# Number specifies how far from the left side of the terminal (in spaces) to
-# begin printing the columns, in case you want to e.g. center them under your
-# text.
-# Example:
-# col_offset="auto" - Default behavior of neofetch
-# col_offset=7      - Leave 7 spaces then print the colors
-col_offset="auto"
 
 # Progress Bars
 
@@ -678,9 +608,9 @@ disk_display="off"
 #
 # Default:  'ascii'
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
-#           'pot', 'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
+#           'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
-image_backend="ascii"
+image_backend="caca"
 
 # Image Source
 #
@@ -694,7 +624,7 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="auto"
+image_source=~/.config/neofetch/rempng.png
 
 # Ascii Options
 
@@ -704,47 +634,14 @@ image_source="auto"
 # Default: 'auto'
 # Values:  'auto', 'distro_name'
 # Flag:    --ascii_distro
-# NOTE: AIX, Alpine, Anarchy, Android, Antergos, antiX, "AOSC OS",
-#       "AOSC OS/Retro", Apricity, ArcoLinux, ArchBox, ARCHlabs,
-#       ArchStrike, XFerience, ArchMerge, Arch, Artix, Arya, Bedrock,
-#       Bitrig, BlackArch, BLAG, BlankOn, BlueLight, bonsai, BSD,
-#       BunsenLabs, Calculate, Carbs, CentOS, Chakra, ChaletOS,
-#       Chapeau, Chrom*, Cleanjaro, ClearOS, Clear_Linux, Clover,
-#       Condres, Container_Linux, CRUX, Cucumber, Debian, Deepin,
-#       DesaOS, Devuan, DracOS, DarkOs, DragonFly, Drauger, Elementary,
-#       EndeavourOS, Endless, EuroLinux, Exherbo, Fedora, Feren, FreeBSD,
-#       FreeMiNT, Frugalware, Funtoo, GalliumOS, Garuda, Gentoo, Pentoo,
-#       gNewSense, GNOME, GNU, GoboLinux, Grombyang, Guix, Haiku, Huayra,
-#       Hyperbola, janus, Kali, KaOS, KDE_neon, Kibojoe, Kogaion,
-#       Korora, KSLinux, Kubuntu, LEDE, LFS, Linux_Lite,
-#       LMDE, Lubuntu, Lunar, macos, Mageia, MagpieOS, Mandriva,
-#       Manjaro, Maui, Mer, Minix, LinuxMint, MX_Linux, Namib,
-#       Neptune, NetBSD, Netrunner, Nitrux, NixOS, Nurunner,
-#       NuTyX, OBRevenge, OpenBSD, openEuler, OpenIndiana, openmamba,
-#       OpenMandriva, OpenStage, OpenWrt, osmc, Oracle, OS Elbrus, PacBSD,
-#       Parabola, Pardus, Parrot, Parsix, TrueOS, PCLinuxOS, Peppermint,
-#       popos, Porteus, PostMarketOS, Proxmox, Puppy, PureOS, Qubes, Radix,
-#       Raspbian, Reborn_OS, Redstar, Redcore, Redhat, Refracted_Devuan,
-#       Regata, Rosa, sabotage, Sabayon, Sailfish, SalentOS, Scientific,
-#       Septor, SereneLinux, SharkLinux, Siduction, Slackware, SliTaz,
-#       SmartOS, Solus, Source_Mage, Sparky, Star, SteamOS, SunOS,
-#       openSUSE_Leap, openSUSE_Tumbleweed, openSUSE, SwagArch, Tails,
-#       Trisquel, Ubuntu-Budgie, Ubuntu-GNOME, Ubuntu-MATE, Ubuntu-Studio,
-#       Ubuntu, Venom, Void, Obarun, windows10, Windows7, Xubuntu, Zorin,
-#       and IRIX have ascii logos
-# NOTE: Arch, Ubuntu, Redhat, and Dragonfly have 'old' logo variants.
-#       Use '{distro name}_old' to use the old logos.
+#
+# NOTE: Arch and Ubuntu have 'old' logo variants.
+#       Change this to 'arch_old' or 'ubuntu_old' to use the old logos.
 # NOTE: Ubuntu has flavor variants.
-#       Change this to Lubuntu, Kubuntu, Xubuntu, Ubuntu-GNOME,
-#       Ubuntu-Studio, Ubuntu-Mate  or Ubuntu-Budgie to use the flavors.
-# NOTE: Arcolinux, Dragonfly, Fedora, Alpine, Arch, Ubuntu,
-#       CRUX, Debian, Gentoo, FreeBSD, Mac, NixOS, OpenBSD, android,
-#       Antrix, CentOS, Cleanjaro, ElementaryOS, GUIX, Hyperbola,
-#       Manjaro, MXLinux, NetBSD, Parabola, POP_OS, PureOS,
-#       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
-#       postmarketOS, and Void have a smaller logo variant.
-#       Use '{distro name}_small' to use the small variants.
-ascii_distro="auto"
+#       Change this to 'Lubuntu', 'Xubuntu', 'Ubuntu-GNOME' or 'Ubuntu-Budgie' to use the flavors.
+# NOTE: Arch, Crux and Gentoo have a smaller logo variant.
+#       Change this to 'arch_small', 'crux_small' or 'gentoo_small' to use the small logos.
+ascii_distro="arch_small"
 
 # Ascii Colors
 #
@@ -755,7 +652,8 @@ ascii_distro="auto"
 # Example:
 # ascii_colors=(distro)      - Ascii is colored based on Distro colors.
 # ascii_colors=(4 6 1 8 8 6) - Ascii is colored using these colors.
-ascii_colors=(distro)
+#
+ascii_colors=(6 14)
 
 # Bold ascii logo
 # Whether or not to bold the ascii logo.
@@ -799,7 +697,7 @@ crop_mode="normal"
 # Values:   'northwest', 'north', 'northeast', 'west', 'center'
 #           'east', 'southwest', 'south', 'southeast'
 # Flag:     --crop_offset
-crop_offset="center"
+crop_offset="northwest"
 
 # Image size
 # The image is half the terminal width by default.
@@ -808,14 +706,14 @@ crop_offset="center"
 # Values:  'auto', '00px', '00%', 'none'
 # Flags:   --image_size
 #          --size
-image_size="auto"
+image_size="none"
 
 # Gap between image and text
 #
 # Default: '3'
 # Values:  'num', '-num'
 # Flag:    --gap
-gap=2
+gap=3
 
 # Image offsets
 # Only works with the w3m backend.
