apply all themes according to wezterm

--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -29,10 +29,10 @@ print_info() {
   # info "Font" font
   # info "Song" song
   # [[ "$player" ]] && prin "Music Player" "$player"
-  info "🖧 " local_ip
+  info " " local_ip
   # info "Public IP" public_ip
   # info "Users" users
-  # info "Locale" locale  # This only works on glibc systems.
+  # info " " locale # This only works on glibc systems.
 
   info cols
   prin "${cl5}────────────────────── ${cl0} ${cl0} ${cl2} ${cl2} ${cl5} ${cl5} ${cl5} $(color 15) ${cl9}─┘"
@@ -464,7 +464,7 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(10 8 5 10 11 13)
+colors=(4 8 5 10 11 3)
 
 # Text Options
 
