--- a/win-terminal/settings.json
+++ b/win-terminal/settings.json
@@ -79,7 +79,7 @@
       },
       {
         "adjustIndistinguishableColors": "never",
-        "backgroundImage": "\\\\wsl.localhost\\Ubuntu\\home\\jeswins\\GitHub\\dotfyles\\Windows Terminal\\eva_01_retro_blurred.png",
+        "backgroundImage": "\\\\wsl.localhost\\Ubuntu\\home\\jeswins\\GitHub\\dotfyles\\Images\\eva_01_retro_blurred.png",
         "backgroundImageOpacity": 0.13,
         "colorScheme": "Tango Dark",
         "cursorShape": "emptyBox",
