add all configs for neofetch in the neofetch config file instead of specifying it in fish config

--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -610,7 +610,7 @@ disk_display="off"
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
 #           'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
-image_backend="caca"
+image_backend="jp2a"
 
 # Image Source
 #
@@ -624,7 +624,7 @@ image_backend="caca"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source=~/.config/neofetch/rempng.png
+image_source=/home/jeswins/.config/Images/eva_01_retro_cropped.jpg
 
 # Ascii Options
 
